complete the demo

--- a/front-end/src/App.scss
+++ b/front-end/src/App.scss
@@ -12,11 +12,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
   }
 .wrapper{
   display: flex;
+  align-items: flex-start;
+  justify-content: center;
   flex-grow: 1;
 }
 .MuiButton-root:hover {
